--- a/html/advertisement.html
+++ b/html/advertisement.html
@@ -80,14 +80,14 @@
             <span class="absolute inset-y-0 left-0 w-1 bg-cyan-600 rounded-tr-lg rounded-br-lg"
               aria-hidden="true"></span>
             <a class="inline-flex items-center w-full text-sm font-semibold text-gray-800 transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200 dark:text-gray-100"
-              href="forms.html">
+              href="/dashboard/engagement">
               <svg class="w-5 h-5" aria-hidden="true" fill="none" stroke-linecap="round" stroke-linejoin="round"
                 stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
                 <path
                   d="M15 15l-2 5L9 9l11 4-5 2zm0 0l5 5M7.188 2.239l.777 2.897M5.136 7.965l-2.898-.777M13.95 4.05l-2.122 2.122m-5.657 5.656l-2.12 2.122">
                 </path>
               </svg>
-              <span class="ml-4">Advertisement</span>
+              <span class="ml-4">Engagement</span>
             </a>
           </li>
           <!-- <li class="relative px-6 py-3">
@@ -313,7 +313,7 @@
               </button>
             </li>
             <!-- Notifications menu -->
-            <li class="relative">
+            <!-- <li class="relative">
               <button class="relative align-middle rounded-md focus:outline-none focus:shadow-outline-cyan"
                 @click="toggleNotificationsMenu" @keydown.escape="closeNotificationsMenu" aria-label="Notifications"
                 aria-haspopup="true">
@@ -322,7 +322,6 @@
                     d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z">
                   </path>
                 </svg>
-                <!-- Notification badge -->
                 <span aria-hidden="true"
                   class="absolute top-0 right-0 inline-block w-3 h-3 transform translate-x-1 -translate-y-1 bg-red-600 border-2 border-white rounded-full dark:border-gray-800"></span>
               </button>
@@ -359,58 +358,19 @@
                   </li>
                 </ul>
               </template>
-            </li>
+            </li> -->
             <!-- Profile menu -->
             <li class="relative">
-              <button class="align-middle rounded-full focus:shadow-outline-cyan focus:outline-none"
-                @click="toggleProfileMenu" @keydown.escape="closeProfileMenu" aria-label="Account" aria-haspopup="true">
-                <img class="object-cover w-8 h-8 rounded-full"
-                  src="https://images.unsplash.com/photo-1502378735452-bc7d86632805?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=200&fit=max&s=aa3a807e1bbdfd4364d1f449eaa96d82"
-                  alt="" aria-hidden="true" />
+              <button id="toggleprofile" class="flex text-sm border-2 object-cover border-transparent rounded-full focus:outline-none focus:border-white transition duration-150 ease-in-out" id="user-menu" aria-label="User menu" aria-haspopup="true">
+                <img class="h-8 w-8 rounded-full" id="pfp" src="" alt="">
               </button>
-              <template x-if="isProfileMenuOpen">
-                <ul x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100"
-                  x-transition:leave-end="opacity-0" @click.away="closeProfileMenu" @keydown.escape="closeProfileMenu"
-                  class="absolute right-0 w-56 p-2 mt-2 space-y-2 text-gray-600 bg-white border border-gray-100 rounded-md shadow-md dark:border-gray-700 dark:text-gray-300 dark:bg-gray-700"
-                  aria-label="submenu">
-                  <li class="flex">
-                    <a class="inline-flex items-center w-full px-2 py-1 text-sm font-semibold transition-colors duration-150 rounded-md hover:bg-gray-100 hover:text-gray-800 dark:hover:bg-gray-800 dark:hover:text-gray-200"
-                      href="#">
-                      <svg class="w-4 h-4 mr-3" aria-hidden="true" fill="none" stroke-linecap="round"
-                        stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
-                        <path d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z">
-                        </path>
-                      </svg>
-                      <span>Profile</span>
-                    </a>
-                  </li>
-                  <li class="flex">
-                    <a class="inline-flex items-center w-full px-2 py-1 text-sm font-semibold transition-colors duration-150 rounded-md hover:bg-gray-100 hover:text-gray-800 dark:hover:bg-gray-800 dark:hover:text-gray-200"
-                      href="#">
-                      <svg class="w-4 h-4 mr-3" aria-hidden="true" fill="none" stroke-linecap="round"
-                        stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
-                        <path
-                          d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z">
-                        </path>
-                        <path d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
-                      </svg>
-                      <span>Settings</span>
-                    </a>
-                  </li>
-                  <li class="flex">
-                    <a class="inline-flex items-center w-full px-2 py-1 text-sm font-semibold transition-colors duration-150 rounded-md hover:bg-gray-100 hover:text-gray-800 dark:hover:bg-gray-800 dark:hover:text-gray-200"
-                      href="#">
-                      <svg class="w-4 h-4 mr-3" aria-hidden="true" fill="none" stroke-linecap="round"
-                        stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
-                        <path
-                          d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1">
-                        </path>
-                      </svg>
-                      <span>Log out</span>
-                    </a>
-                  </li>
-                </ul>
-              </template>
+              <div id="resultprofile" class="hidden z-40 origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg">
+                <div class="py-1 rounded-md bg-white shadow-xs" role="menu" aria-orientation="vertical" aria-labelledby="user-menu">
+                  <a href="/account" class="block px-4 py-2 text-sm leading-5 text-gray-700 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 transition duration-150 ease-in-out" role="menuitem">Your Profile</a>
+                  <a href="/dashboard/home" class="block px-4 py-2 text-sm leading-5 text-gray-700 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 transition duration-150 ease-in-out" role="menuitem">Dashboard</a>
+                  <a id="signOut" class="block px-4 py-2 text-sm leading-5 text-gray-700 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 transition duration-150 ease-in-out" role="menuitem">Sign out</a>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
@@ -443,12 +403,12 @@
                        hover:text-primary 
                        capitalize
                        ">
-                        Update Feed <span class="lowercase">(s)</span>
+                        Update Feed
+                         <!-- <span class="lowercase">(s)</span> -->
                       </a>
                     </h3>
                     <p class="text-base text-body-color leading-relaxed mb-7">
-                      Lorem ipsum dolor sit amet pretium consectetur adipiscing
-                      elit. Lorem consectetur adipiscing elit.
+                     Want to update your readers on the latest news? Post messages to your public profile.
                     </p>
                     <div x-data="{ modelOpen: false }">
                       <button @click="modelOpen =!modelOpen" class="inline-block
@@ -558,7 +518,7 @@
                                 </div>
                               </form>
                               <p class="ml-auto text-xs text-gray-500 dark:text-gray-400">Remember, contributions to
-                                this topic should follow our <a href="#"
+                                this topic should follow our <a href="/cg"
                                   class="text-blue-600 dark:text-blue-500 hover:underline">Community Guidelines</a>.</p>
 
                             </div>
@@ -588,14 +548,14 @@
                        hover:text-primary 
                        capitalize
                        ">
-                        Create Advertisement <span class="lowercase">(s)</span>
+                        Create Advertisement
+                         <!-- <span class="lowercase">(s)</span> -->
                       </a>
                     </h3>
                     <p class="text-base text-body-color leading-relaxed mb-7">
-                      Lorem ipsum dolor sit amet pretium consectetur adipiscing
-                      elit. Lorem consectetur adipiscing elit.
+                      Want to reach more people? Advertise your series on our platform at an affordable pricing.
                     </p>
-                    <a href="/createad" class="
+                    <a href="/advertisement/create" class="
                     inline-block
                     py-2
                     px-7
@@ -632,10 +592,9 @@
                       </a>
                     </h3>
                     <p class="text-base text-body-color leading-relaxed mb-7">
-                      Lorem ipsum dolor sit amet pretium consectetur adipiscing
-                      elit. Lorem consectetur adipiscing elit.
+                      Already advertised with us or have a pending advertisement? Check your status here.
                     </p>
-                    <a href="javascript:void(0)" class="
+                    <a href="/advertisement/list" class="
                     inline-block
                     py-2
                     px-7
@@ -668,14 +627,13 @@
                        hover:text-primary 
                        capitalize
                        ">
-                        Write a Blog <span class="lowercase"></span>
+                        Tips from Yume <span class="lowercase"></span>
                       </a>
                     </h3>
                     <p class="text-base text-body-color leading-relaxed mb-7">
-                      Lorem ipsum dolor sit amet pretium consectetur adipiscing
-                      elit. Lorem consectetur adipiscing elit.
+                      Read our blog to make the most of our engagement tools.
                     </p>
-                    <a href="javascript:void(0)" class="
+                    <a class="
                     inline-block
                     py-2
                     px-7
@@ -686,7 +644,7 @@
                     hover:border-primary hover:bg-primary hover:text-white
                     transition capitalize
                     ">
-                      enter
+                      Coming soon
                     </a>
                   </div>
                 </div>
@@ -705,7 +663,7 @@
   <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"></script>
   <script src="/js/init.js" type="module"></script>
-  <script defer src="/js/advertisement.js" type="module"></script>
+  <script defer src="/js/engagement.js" type="module"></script>
   <script>
 
   </script>
