--- a/html/home.html
+++ b/html/home.html
@@ -360,9 +360,9 @@
               </div>
               <div class="w-full lg:w-1/2 xl:w-5/12 ">
                 <div class="dark:bg-black relative rounded-lg p-8 sm:p-12 shadow-lg">
-                  <form>
+                  <form action="https://formspree.io/f/moqryjol" method="POST">
                     <div class="mb-6">
-                      <input type="text" placeholder="Your Name" class="
+                      <input required name="name" type="text" placeholder="Your Name" class="
                        w-full
                        rounded
                        py-3
@@ -375,7 +375,7 @@
                        " />
                     </div>
                     <div class="mb-6">
-                      <input type="email" placeholder="Your Email" class="
+                      <input required name="email" type="email" placeholder="Your Email" class="
                        w-full
                        rounded
                        py-3
@@ -387,8 +387,8 @@
                        focus:border-primary
                        " />
                     </div>
-                    <div class="mb-6">
-                      <input type="text" placeholder="Your Phone" class="
+                    <!-- <div class="mb-6">
+                      <input required type="number" placeholder="Your Phone" class="
                        w-full
                        rounded
                        py-3
@@ -399,9 +399,9 @@
                        focus-visible:shadow-none
                        focus:border-primary
                        " />
-                    </div>
+                    </div> -->
                     <div class="mb-6">
-                      <textarea rows="6" placeholder="Your Message" class="
+                      <textarea required name="message" rows="6" placeholder="Your Message" class="
                        w-full
                        rounded
                        py-3
