--- a/html/creator.html
+++ b/html/creator.html
@@ -171,7 +171,7 @@
                         id="username">
                       </span>
                       <svg xmlns="http://www.w3.org/2000/svg" width="5" height="20" fill="currentColor" class="text-cyan-400" viewBox="0 0 16 16">
-                        <path d="M10.067.87a2.89 2.89 0 0 0-4.134 0l-.622.638-.89-.011a2.89 2.89 0 0 0-2.924 2.924l.01.89-.636.622a2.89 2.89 0 0 0 0 4.134l.637.622-.011.89a2.89 2.89 0 0 0 2.924 2.924l.89-.01.622.636a2.89 2.89 0 0 0 4.134 0l.622-.637.89.011a2.89 2.89 0 0 0 2.924-2.924l-.01-.89.636-.622a2.89 2.89 0 0 0 0-4.134l-.637-.622.011-.89a2.89 2.89 0 0 0-2.924-2.924l-.89.01-.622-.636zm.287 5.984-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7 8.793l2.646-2.647a.5.5 0 0 1 .708.708z"/>
+                        <path id="verifiedSVGPath" d="M10.067.87a2.89 2.89 0 0 0-4.134 0l-.622.638-.89-.011a2.89 2.89 0 0 0-2.924 2.924l.01.89-.636.622a2.89 2.89 0 0 0 0 4.134l.637.622-.011.89a2.89 2.89 0 0 0 2.924 2.924l.89-.01.622.636a2.89 2.89 0 0 0 4.134 0l.622-.637.89.011a2.89 2.89 0 0 0 2.924-2.924l-.01-.89.636-.622a2.89 2.89 0 0 0 0-4.134l-.637-.622.011-.89a2.89 2.89 0 0 0-2.924-2.924l-.89.01-.622-.636zm.287 5.984-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7 8.793l2.646-2.647a.5.5 0 0 1 .708.708z"/>
                       </svg>
                       </div>
 
@@ -577,29 +577,29 @@
                             <div class="flex flex-wrap -m-1 md:-m-2">
                               <div class="flex flex-wrap w-1/2 mx-auto">
                                 <div class="w-1/2 p-1 md:p-2 ">
-                                  <img id="artSample0" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg hover:scale-150 hover:object-contain ease-in-out duration-300"
+                                  <img loading="lazy" id="artSample0" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg hover:scale-150 hover:object-contain ease-in-out duration-300"
                                     src="">
                                 </div>
                                 <div class="w-1/2 p-1 md:p-2 ">
-                                  <img id="artSample1" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg hover:scale-150 hover:object-contain ease-in-out duration-300"
+                                  <img loading="lazy" id="artSample1" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg hover:scale-150 hover:object-contain ease-in-out duration-300"
                                     src="">
                                 </div>
                                 <div class="w-full p-1 md:p-2 ">
-                                  <img id="artSample2" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg hover:scale-150 hover:object-contain ease-in-out duration-300"
+                                  <img loading="lazy" id="artSample2" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg hover:scale-150 hover:object-contain ease-in-out duration-300"
                                     src="">
                                 </div>
                               </div>
                               <div class="flex flex-wrap w-1/2 mx-auto">
                                 <div class="w-full p-1 md:p-2" >
-                                  <img id="artSample3" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg hover:scale-150 hover:object-contain ease-in-out duration-300"
+                                  <img loading="lazy" id="artSample3" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg hover:scale-150 hover:object-contain ease-in-out duration-300"
                                     src="">
                                 </div>
                                 <div class="w-1/2 p-1 md:p-2 ">
-                                  <img id="artSample4" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg hover:scale-150 hover:object-contain ease-in-out duration-300"
+                                  <img loading="lazy" id="artSample4" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg hover:scale-150 hover:object-contain ease-in-out duration-300"
                                     src="">
                                 </div>
                                 <div class="w-1/2 p-1 md:p-2 ">
-                                  <img id="artSample5" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg hover:scale-150 hover:object-contain ease-in-out duration-300"
+                                  <img loading="lazy" id="artSample5" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg hover:scale-150 hover:object-contain ease-in-out duration-300"
                                     src="">
                                 </div>
                               </div>
