--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -558,8 +558,7 @@
                 <p class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400">
                   Creator rank
                 </p>
-                <p class="text-lg font-semibold text-gray-700 dark:text-gray-200">
-                  I'll do this tomorrow
+                <p id="creatorRank" class="text-lg font-semibold text-gray-700 dark:text-gray-200">
                 </p>
               </div>
             </div>
