--- a/html/engagement.html
+++ b/html/engagement.html
@@ -27,7 +27,7 @@
         <ul class="mt-6">
           <li class="relative px-6 py-3">
             <span class="absolute inset-y-0 left-0 w-1  rounded-tr-lg rounded-br-lg" aria-hidden="true"></span>
-            <a class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200 dark:text-gray-100"
+            <a class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200 "
               href="/dashboard/home">
               <svg class="w-5 h-5" aria-hidden="true" fill="none" stroke-linecap="round" stroke-linejoin="round"
                 stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
@@ -42,7 +42,7 @@
         <ul>
           <li class="relative px-6 py-3">
             <span class="" aria-hidden="true"></span>
-            <a class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200 dark:text-gray-100"
+            <a class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200 "
               href="/dashboard/series">
               <svg class="w-5 h-5" aria-hidden="true" fill="none" stroke-linecap="round" stroke-linejoin="round"
                 stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
@@ -54,7 +54,7 @@
             </a>
           </li>
           <li class="relative px-6 py-3">
-            <a class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200 dark:text-gray-100"
+            <a class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200 "
               href="/account">
               <svg class="w-5 h-5" aria-hidden="true" fill="none" stroke-linecap="round" stroke-linejoin="round"
                 stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
@@ -472,10 +472,10 @@
         </div>
       </header>
       <main class="">
-        <div class="xl:w-full border-b border-gray-300 dark:border-gray-700 py-5 bg-white dark:bg-gray-800">
+        <div class="xl:w-full border-b border-gray-300 dark:border-gray-700 py-5 ">
           <div class="flex w-11/12 mx-auto xl:w-full xl:mx-0 items-center ">
             <h1 tabindex="0" role="heading" aria-label="profile information"
-              class="focus:outline-none text-3xl font-bold text-gray-800 dark:text-gray-100 ">Engagement</h1>
+              class="focus:outline-none text-3xl font-bold text-gray-800 dark:text-gray-100 ml-2 ">Engagement</h1>
           </div>
         </div>
         <div class="flex w-full items-center justify-center mt-4">
